Closed Bug 26792 Opened 26 years ago Closed 26 years ago

Crash on table printing

Categories

(Core :: Printing: Output, defect, P3)

x86
All
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: ekrock, Assigned: karnaze)

References

()

Details

(Keywords: crash, platform-parity, testcase, Whiteboard: [nsbeta2+][TESTCASE] Crash when printing a table with simple CSS)

Attachments

(1 file)

Using both M13 and 2/4 Commercial on WinNT 4.0 SP4. To repro: try to print the page.
Keywords: crash
Summary: [CRASH] upon attempting to print this page → upon attempting to print this page
If there is anyway to reduce this to what is happening to would save me a ton of time. This is a large web page.. and it probably is a known bug.. and I will have to spend a few hours trying to localize the problem before I can diagnose it.
Status: NEW → ASSIGNED
I will try...reducing this problem...will comment when done.
Summary: upon attempting to print this page → [CRASH]upon attempting to print this page
Summary: [CRASH]upon attempting to print this page → Crash upon attempting to print this page
Target Milestone: M15
This crashes in some table code.. Chris can you take a look.
Assignee: dcone → karnaze
Status: ASSIGNED → NEW
Reassigning to Don.
Assignee: karnaze → dcone
I tried printing bugzilla query results w/ a 2/17 mozilla build. Crashed.
Seems to be a table problem.. can you look at this.
Assignee: dcone → karnaze
Status: NEW → ASSIGNED
Keywords: makingtest
Whiteboard: Antti.Nayha@nixu.fi
mass move to m16
Target Milestone: M15 → M16
Attaching minimized test case. The bug occurs also on Win95 (build 2000-04-03-08).
Keywords: makingtesttestcase
Whiteboard: Antti.Nayha@nixu.fi
Attached file Minimized test case
Summary: Crash upon attempting to print this page → Crash on table printing
Whiteboard: [TESTCASE] Crash when printing a table with simple CSS
Stack Trace : Call Stack: (Signature = nsTableRowGroupFrame::SplitRowGroup 99101784) nsTableRowGroupFrame::SplitRowGroup [d:\builds\seamonkey\mozilla\layout\html\table\src\nsTableRowGroupFrame.cpp, line 964] nsTableRowGroupFrame::Reflow [d:\builds\seamonkey\mozilla\layout\html\table\src\nsTableRowGroupFrame.cpp, line 1117] nsContainerFrame::ReflowChild [d:\builds\seamonkey\mozilla\layout\html\base\src\nsContainerFrame.cpp, line 636] nsTableFrame::ReflowMappedChildren [d:\builds\seamonkey\mozilla\layout\html\table\src\nsTableFrame.cpp, line 2955] nsTableFrame::ResizeReflowPass2 [d:\builds\seamonkey\mozilla\layout\html\table\src\nsTableFrame.cpp, line 1968] nsTableFrame::Reflow [d:\builds\seamonkey\mozilla\layout\html\table\src\nsTableFrame.cpp, line 1609] nsContainerFrame::ReflowChild [d:\builds\seamonkey\mozilla\layout\html\base\src\nsContainerFrame.cpp, line 636] nsTableOuterFrame::Reflow [d:\builds\seamonkey\mozilla\layout\html\table\src\nsTableOuterFrame.cpp, line 1015] nsBlockReflowContext::ReflowBlock [d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockReflowContext.cpp, line 450] nsBlockFrame::ReflowBlockFrame [d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp, line 3583] nsBlockFrame::ReflowLine [d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp, line 2896] nsBlockFrame::ReflowDirtyLines [d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp, line 2703] nsBlockFrame::Reflow [d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp, line 1591] nsBlockReflowContext::ReflowBlock [d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockReflowContext.cpp, line 450] nsBlockFrame::ReflowBlockFrame [d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp, line 3583] nsBlockFrame::ReflowLine [d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp, line 2896] nsBlockFrame::ReflowDirtyLines [d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp, line 2703] nsBlockFrame::Reflow [d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp, line 1591] nsAreaFrame::Reflow [d:\builds\seamonkey\mozilla\layout\html\base\src\nsAreaFrame.cpp, line 277] nsContainerFrame::ReflowChild [d:\builds\seamonkey\mozilla\layout\html\base\src\nsContainerFrame.cpp, line 636] nsPageFrame::Reflow [d:\builds\seamonkey\mozilla\layout\html\base\src\nsPageFrame.cpp, line 128] nsContainerFrame::ReflowChild [d:\builds\seamonkey\mozilla\layout\html\base\src\nsContainerFrame.cpp, line 636] nsSimplePageSequenceFrame::Reflow [d:\builds\seamonkey\mozilla\layout\html\base\src\nsSimplePageSequence.cpp, line 247] nsContainerFrame::ReflowChild [d:\builds\seamonkey\mozilla\layout\html\base\src\nsContainerFrame.cpp, line 636] ViewportFrame::Reflow [d:\builds\seamonkey\mozilla\layout\html\base\src\nsViewportFrame.cpp, line 545] PresShell::InitialReflow [d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp, line 1508] DocumentViewerImpl::Print [d:\builds\seamonkey\mozilla\layout\base\src\nsDocumentViewer.cpp, line 1319] nsBrowserInstance::Print [d:\builds\seamonkey\mozilla\xpfe\browser\src\nsBrowserInstance.cpp, line 1908] XPTC_InvokeByIndex [d:\builds\seamonkey\mozilla\xpcom\reflect\xptcall\src\md\win32\xptcinvoke.cpp, line 139] nsXPCWrappedNativeClass::CallWrappedMethod [d:\builds\seamonkey\mozilla\js\src\xpconnect\src\xpcwrappednativeclass.cpp, line 899] WrappedNative_CallMethod [d:\builds\seamonkey\mozilla\js\src\xpconnect\src\xpcwrappednativejsops.cpp, line 195] js_Invoke [d:\builds\seamonkey\mozilla\js\src\jsinterp.c, line 687] js_Interpret [d:\builds\seamonkey\mozilla\js\src\jsinterp.c, line 2465] js_Invoke [d:\builds\seamonkey\mozilla\js\src\jsinterp.c, line 703] js_InternalInvoke [d:\builds\seamonkey\mozilla\js\src\jsinterp.c, line 776] JS_CallFunctionValue [d:\builds\seamonkey\mozilla\js\src\jsapi.c, line 2796] nsJSContext::CallEventHandler [d:\builds\seamonkey\mozilla\dom\src\base\nsJSEnvironment.cpp, line 734] nsJSEventListener::HandleEvent [d:\builds\seamonkey\mozilla\dom\src\events\nsJSEventListener.cpp, line 141] nsEventListenerManager::HandleEventSubType [d:\builds\seamonkey\mozilla\layout\events\src\nsEventListenerManager.cpp, line 706] nsEventListenerManager::HandleEvent [d:\builds\seamonkey\mozilla\layout\events\src\nsEventListenerManager.cpp, line 1481] nsXULElement::HandleDOMEvent [d:\builds\seamonkey\mozilla\rdf\content\src\nsXULElement.cpp, line 3296] nsMenuFrame::Execute [d:\builds\seamonkey\mozilla\layout\xul\base\src\nsMenuFrame.cpp, line 1283] nsMenuFrame::HandleEvent [d:\builds\seamonkey\mozilla\layout\xul\base\src\nsMenuFrame.cpp, line 294] PresShell::HandleEvent [d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp, line 3461] nsView::HandleEvent [d:\builds\seamonkey\mozilla\view\src\nsView.cpp, line 811] nsView::HandleEvent [d:\builds\seamonkey\mozilla\view\src\nsView.cpp, line 784] nsViewManager2::DispatchEvent [d:\builds\seamonkey\mozilla\view\src\nsViewManager2.cpp, line 1354] HandleEvent [d:\builds\seamonkey\mozilla\view\src\nsView.cpp, line 69] nsWindow::DispatchEvent [d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp, line 502] nsWindow::DispatchWindowEvent [d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp, line 519] nsWindow::DispatchMouseEvent [d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp, line 3139] ChildWindow::DispatchMouseEvent [d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp, line 3344] nsWindow::ProcessMessage [d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp, line 2332] nsWindow::WindowProc [d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp, line 677] USER32.dll + 0x1820 (0x77e71820)
*** Bug 31011 has been marked as a duplicate of this bug. ***
crashes the testcase on mac as well. Many pages crash with the same stack trace as this one. Pls fix this in m16.Adding beta2.
Keywords: beta2, pp
OS: Windows NT → All
Putting on [beta2+] radar.
Whiteboard: [TESTCASE] Crash when printing a table with simple CSS → [beta2+][TESTCASE] Crash when printing a table with simple CSS
Keywords: nsbeta2
Keywords: beta2
Whiteboard: [beta2+][TESTCASE] Crash when printing a table with simple CSS → [nsbeta2+][TESTCASE] Crash when printing a table with simple CSS
Updating [beta2+] in Status Summary to [nsbeta2+]
Fix to SplitRowGroup()
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
verified on all platforms (2000050412)
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: