b=26792 r=karnaze@netscape.com Change to SplitRowGroup to handle the case where GetCellInfoAt() returns NULL